--- a/comprehensive_lp_calculator.html
+++ b/comprehensive_lp_calculator.html
@@ -1235,7 +1235,17 @@
         let priceChart, analyticsChart;
         let lpOracle = new AdvancedLPOracle();
         let matrixCanvas, matrixCtx;
-
+        
+        // API Configuration - ADD YOUR KEYS HERE
+const API_CONFIG = {
+    bithomp: {
+        apiKey: '3c0d9cb4-25b8-4b53-9ce9-1b542bdbed50',
+        baseUrl: 'https://bithomp.com/api/v2'
+    },
+    xrpl: {
+        nodeUrl: 'https://s1.ripple.com:51234'
+    }
+};
         // Initialize matrix rain effect
         function initMatrixRain() {
             matrixCanvas = document.getElementById('matrixCanvas');
@@ -1613,16 +1623,7 @@
                 matrixCanvas.height = window.innerHeight;
             }
         });
-        // API Configuration - ADD YOUR KEYS HERE
-const API_CONFIG = {
-    bithomp: {
-        apiKey: '3c0d9cb4-25b8-4b53-9ce9-1b542bdbed50',
-        baseUrl: 'https://bithomp.com/api/v2'
-    },
-    xrpl: {
-        nodeUrl: 'https://s1.ripple.com:51234' // No API key needed
-    }
-};
+
     </script>
 </body>
 </html>
